--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
-    background-image:url(./bg-discord.png) ;
+    background-image:url(./bg-discord.png);
+    background-size: cover;
+
     @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
 
 font-family: "Nunito Sans", sans-serif;
@@ -9,17 +11,62 @@ font-family: "Nunito Sans", sans-serif;
     padding: 0;
     box-sizing: border-box;
   }
+
 header{
     background-color:#333333;
-    height: 85px;
-    display: flex;
-
+    height: 85px;    
 }
+
 main{
     width: 90%;
-    background-color: brown;
+    background-color: rgb(255, 255, 255);
     margin: auto;
     border-radius: 25px;
+}
+main .container {
+    overflow: hidden;
+    /* Insère le reste des propriétés dont tu as besoin ici */
+  }
+
+  nav,h1 {
+    display: inline-block;
+    
+}
+h1,p1{
+    display:float;
+    float: left;
+    padding: 15px;
+
+    
+}
+.hero{
+      background-image: url(./hero.png);
+
+    height: 300px;
+    text-align: center;
+    background:linear-gradient(135deg, #8547c6 10%, #b845c1 50%, #ab5d8a );
+    border-radius: 15px;
+  
+}
+h3{
+    text-align: center;
+}
+
+article{
+    border: 2px solid rosybrown;
+    width: 70%;
+    display: inline-block;
+}
+aside{
+    border: 1px solid white;
+    width: 30%;
+    float: right;
+}
+li{
+    display: inline;
+}
+a{
+    font-size: 15px;
 }
 h1{
     color: white;
@@ -32,10 +79,17 @@ a{
     font-size: 20p;
     
 }
+
+
+
 footer{
     width: 100%;
     text-align: center;
     padding: 30px;
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    background-color:#333333;
     
 
 }
