--- a/style.css
+++ b/style.css
@@ -14,72 +14,87 @@ font-family: "Nunito Sans", sans-serif;
 
 header{
     background-color:#333333;
-    height: 85px;    
+    height: 85px;
+}
+.container2{
+    padding: 30px 0px;
+}
+
+p1{
+    padding-left: 10px;
 }
 
 main{
-    width: 90%;
+
     background-color: rgb(255, 255, 255);
     margin: auto;
     border-radius: 25px;
-}
-main .container {
-    overflow: hidden;
-    /* Insère le reste des propriétés dont tu as besoin ici */
-  }
+    max-width: 1200px;
+    margin-top: 30px;
 
-  nav,h1 {
-    display: inline-block;
-    
 }
-h1,p1{
-    display:float;
-    float: left;
+.inside,.aside{
     padding: 15px;
+}
+h1 {
 
-    
 }
 .hero{
-      background-image: url(./hero.png);
-
-    height: 300px;
-    text-align: center;
-    background:linear-gradient(135deg, #8547c6 10%, #b845c1 50%, #ab5d8a );
-    border-radius: 15px;
-  
+    max-width: 1200px;
+    background:linear-gradient(135deg, #8547c6 10%, #b845c1 50%, #ab5d8a ),url(./hero.png);
+    border-radius:0 0 15px 15px; 
+    background-blend-mode: overlay;
+   
 }
-h3{
-    text-align: center;
+.card{
+    width: 30%;
+    display: inline-block;
+    font-size: 17px;
+    padding: 15px 0px;
+    
+}
+ul{
+    text-align: right;
+    margin-bottom: 15px;
+}
+
+      
+h2{
+     font-size: 30px;
+     padding:10px ;
+}
+h4{ text-align: center;
+    padding: 90px;
+    font-size: 30px;
+    
 }
 
 article{
-    border: 2px solid rosybrown;
     width: 70%;
     display: inline-block;
 }
 aside{
-    border: 1px solid white;
     width: 30%;
     float: right;
 }
+.inside{
+    width: 100%;
+}
 li{
     display: inline;
-}
-a{
-    font-size: 15px;
+    font-size: 20px;
 }
 h1{
     color: white;
     padding: 20px;
     text-transform: uppercase;
+    text-align: left;
 }
 a{
     text-decoration: none;
     color: white;
-    font-size: 20p;
-    
+    font-size: 15x;
 }
-
 
 
 footer{
@@ -90,6 +105,6 @@ footer{
     left: 0;
     position: fixed;
     background-color:#333333;
-    
+    color: white;
 
 }
